bench/tests/plans/snapshots/r#mod__plans__wind_farm__Wind Farm - ProductionQuery4 (Execution Plan).snap
---
source: bench/tests/plans/wind_farm.rs
expression: canonicalize_uuids(&string)
---
ProjectionExec: expr=[ENV_PT(site_label@0) as site_label, ENV_PT(wtur_label@2) as wtur_label, ENV_PT(t@3) as t, ENV_PT(val@1) as val]
  CoalesceBatchesExec: target_batch_size=8192
    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(ts@0, ts@3)], projection=[site_label@1, val@2, wtur_label@3, t@5]
      QuadPatternExec: n_graphs=1, subject=?ts, predicate=<http://www.w3.org/2000/01/rdf-schema#label>, object="Production"
      CoalesceBatchesExec: target_batch_size=8192
        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(site@0, site@0)], projection=[site_label@2, val@3, wtur_label@4, ts@5, t@6]
          QuadPatternExec: n_graphs=1, subject=?site, predicate=<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>, object=<https://github.com/magbak/chrontext/rds_power#Site>
          CoalesceBatchesExec: target_batch_size=8192
            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(generator@0, generator@4)], projection=[site@1, site_label@2, val@3, wtur_label@4, ts@6, t@7]
              QuadPatternExec: n_graphs=1, subject=?generator, predicate=<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>, object=<https://github.com/magbak/chrontext/rds_power#GAA>
              CoalesceBatchesExec: target_batch_size=8192
                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(wtur@0, wtur@4)], projection=[site@1, site_label@2, val@3, wtur_label@4, generator@6, ts@7, t@8]
                  QuadPatternExec: n_graphs=1, subject=?wtur, predicate=<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>, object=<https://github.com/magbak/chrontext/rds_power#A>
                  CoalesceBatchesExec: target_batch_size=8192
                    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(gensys@0, gensys@5)], projection=[site@1, site_label@2, val@3, wtur_label@4, wtur@5, generator@7, ts@8, t@9]
                      QuadPatternExec: n_graphs=1, subject=?gensys, predicate=<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>, object=<https://github.com/magbak/chrontext/rds_power#RA>
                      CoalesceBatchesExec: target_batch_size=8192
                        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(site@0, site@1)], projection=[site@0, site_label@1, val@2, wtur_label@4, wtur@5, gensys@6, generator@7, ts@8, t@9]
                          QuadPatternExec: n_graphs=1, subject=?site, predicate=<http://www.w3.org/2000/01/rdf-schema#label>, object=?site_label
                          CoalesceBatchesExec: target_batch_size=8192
                            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(dp@0, dp@6)], projection=[val@1, site@2, wtur_label@3, wtur@4, gensys@5, generator@6, ts@7, t@9]
                              QuadPatternExec: n_graphs=1, subject=?dp, predicate=<https://github.com/magbak/chrontext#hasValue>, object=?val
                              CoalesceBatchesExec: target_batch_size=8192
                                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(wtur_asp@1, wtur_asp@0)], projection=[site@0, wtur_label@3, wtur@4, gensys@5, generator@6, ts@7, dp@8, t@9]
                                  QuadPatternExec: n_graphs=1, subject=?site, predicate=<https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect>, object=?wtur_asp
                                  CoalesceBatchesExec: target_batch_size=8192
                                    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(wtur_asp@0, wtur_asp@1)], projection=[wtur_asp@0, wtur_label@1, wtur@2, gensys@4, generator@5, ts@6, dp@7, t@8]
                                      QuadPatternExec: n_graphs=1, subject=?wtur_asp, predicate=<http://www.w3.org/2000/01/rdf-schema#label>, object=?wtur_label
                                      CoalesceBatchesExec: target_batch_size=8192
                                        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(wtur@0, wtur@0)], projection=[wtur@0, wtur_asp@1, gensys@3, generator@4, ts@5, dp@6, t@7]
                                          QuadPatternExec: n_graphs=1, subject=?wtur, predicate=<https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode>, object=?wtur_asp
                                          CoalesceBatchesExec: target_batch_size=8192
                                            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(gensys_asp@1, gensys_asp@1)], projection=[wtur@0, gensys@2, generator@4, ts@5, dp@6, t@7]
                                              QuadPatternExec: n_graphs=1, subject=?wtur, predicate=<https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect>, object=?gensys_asp
                                              CoalesceBatchesExec: target_batch_size=8192
                                                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(gensys@0, gensys@0)], projection=[gensys@0, gensys_asp@1, generator@3, ts@4, dp@5, t@6]
                                                  QuadPatternExec: n_graphs=1, subject=?gensys, predicate=<https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode>, object=?gensys_asp
                                                  CoalesceBatchesExec: target_batch_size=8192
                                                    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(generator_asp@1, generator_asp@1)], projection=[gensys@0, generator@2, ts@4, dp@5, t@6]
                                                      QuadPatternExec: n_graphs=1, subject=?gensys, predicate=<https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect>, object=?generator_asp
                                                      CoalesceBatchesExec: target_batch_size=8192
                                                        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(generator@0, generator@0)], projection=[generator@0, generator_asp@1, ts@3, dp@4, t@5]
                                                          QuadPatternExec: n_graphs=1, subject=?generator, predicate=<https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode>, object=?generator_asp
                                                          CoalesceBatchesExec: target_batch_size=8192
                                                            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(ts@1, ts@0)], projection=[generator@0, ts@1, dp@3, t@4]
                                                              QuadPatternExec: n_graphs=1, subject=?generator, predicate=<https://github.com/magbak/chrontext#hasTimeseries>, object=?ts
                                                              CoalesceBatchesExec: target_batch_size=8192
                                                                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(dp@1, dp@0)], projection=[ts@0, dp@1, t@3]
                                                                  QuadPatternExec: n_graphs=1, subject=?ts, predicate=<https://github.com/magbak/chrontext#hasDataPoint>, object=?dp
                                                                  QuadPatternExec: n_graphs=1, subject=?dp, predicate=<https://github.com/magbak/chrontext#hasTimestamp>, object=?t
